h1. CHANGELOG

h2. 1.0.6 June 8, 2011

* fix to avoid the error "You have already activated rake..."

h2. 1.0.5 May 27, 2011

* adjust Javascript and stylesheet link tags for Rails 3.1 
* adjust CSS stylesheets location for Rails 3.1 
* use HTML 5 for Haml
* fix indentation in devise_navigation recipe for Haml
* update gems for Rails 3.0.8 and 3.1: cucumber-rails 0.5.1, capybara 1.0.0.beta1, rspec 2.6.1
* remove "fix_rake" recipe, was needed for Rails 3.0.7, not needed for Rails 3.0.8

h2. 1.0.4 May 24, 2011

* for Rails 3.0, use only gem versions that we know work
* for Rails 3.1+, use optimistic versioning for gems
* add "fix_rake" recipe for Rails 3.0 that binds the rake gem at version 0.8.7 

h2. 1.0.3 May 19, 2011

* new gem versions: devise, bson_ext, rspec-rails, cucumber-rails, capybara
* bugfix for jquery recipe
* exception handling if RSpec or Cucumber example files are unobtainable

h2. 1.0.0 May 17, 2011

* rename project from rails3_devise_wizard to rails_apps_composer and move to new repo at "http://github.com/RailsApps/":http://github.com/RailsApps/ 

h2. 0.3.2 May 17, 2011

* omniauth recipe no longer requires add_user recipe
* fixed a syntax error in the omniauth recipe

h2. 0.3.1 May 13, 2011

* accommodate Rails 3.1 and change the jquery recipe
* modify recipes to compose the rails3-devise-rspec-cucumber example app

h2. 0.2.8 May 5, 2011

* add recipes needed for the rails3-mongoid-omniauth example app
* update various recipes with newer gem versions

h2. 0.2.5 April 18, 2011

* app template will confirm preferences before running recipes (allows creation of a single master installation script)
* add recipes needed for the rails3-mongoid-devise example app
* changes to many recipes (different from RailsWizard)
* execution order dependent on list of recipes, not "run_after" and "run_before" configuration flags (different from RailsWizard)

h2. 0.2.0 April 15, 2011
