@@ -10,8 +10,8 @@ if config['cucumber']
     gem 'launchy', '0.4.0', :group => :test
   else
     # for Rails 3.1+, use optimistic versioning for gems
-    gem 'cucumber-rails', '>= 0.5.1', :group => :test
-    gem 'capybara', '>= 1.0.0.beta1', :group => :test
+    gem 'cucumber-rails', '>= 0.5.2', :group => :test
+    gem 'capybara', '>= 1.0.0.rc1', :group => :test
     gem 'database_cleaner', '>= 0.6.7', :group => :test
     gem 'launchy', '>= 0.4.0', :group => :test
   end
